fixed jquery link

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <a href = "https://github.com/ForrestRed" target="_blank"><h2>~Check out my available projects to learn more~</h2></a>
         </div>
     
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
- 	    <script src="jquery.fittext.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+ 	<script src="jquery.fittext.js"></script>
         <script type="text/javascript">
             $("h1").fitText(.62);
             $("h2").fitText(2.05);
