--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Forrest Red Portfolio</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-	    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="menu">
